// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[[ ToggleMonorepoConfirm ]] renders various states of the toggle monorepo confirm modal: {"togglingMonorepoMode":false,"isMonorepo":false} 1`] = `
"<zmodal-stub title=\\"Convert to monorepo\\">
  <div class=\\"space-y-5 p-4 text-xs text-vanilla-100\\">
    <p>
      Converting <span class=\\"highlight-name\\">test-repo</span> to a monorepo on
      test-org
      would :
    </p>
    <div class=\\"flex w-full items-start gap-2\\">
      <zicon-stub color=\\"juniper-500\\" icon=\\"alert-circle\\" size=\\"x-small\\" class=\\"mt-1 flex-shrink-0\\"></zicon-stub> <span>
        Erase all data related to this repository. Fresh analysis would be triggered for projects inside the monorepo.
      </span>
    </div>
    <div class=\\"flex w-full items-start gap-2\\">
      <zicon-stub color=\\"juniper-500\\" icon=\\"alert-circle\\" size=\\"x-small\\" class=\\"mt-1 flex-shrink-0\\"></zicon-stub> <span>
        The repository will be marked as a monorepo and you would be able to mark folders inside the repository as Projects.
      </span>
    </div>
    <div class=\\"space-y-2\\"><label for=\\"monorepo-validation-text\\" class=\\"text-vanilla-400\\">
        Please type
        <span class=\\"highlight-name\\">test-org/test-repo</span>
        to confirm this action
      </label>
      <zinput-stub id=\\"monorepo-validation-text\\" placeholder=\\"test-org/test-repo\\" value=\\"\\" class=\\"border border-ink-200\\"></zinput-stub>
    </div>
  </div>
</zmodal-stub>"
`;

exports[`[[ ToggleMonorepoConfirm ]] renders various states of the toggle monorepo confirm modal: {"togglingMonorepoMode":false,"isMonorepo":true} 1`] = `
"<zmodal-stub title=\\"Disable monorepo mode\\">
  <div class=\\"space-y-5 p-4 text-xs text-vanilla-100\\">
    <p>
      Converting <span class=\\"highlight-name\\">test-repo</span> to a monorepo on
      test-org
      would :
    </p>
    <div class=\\"flex w-full items-start gap-2\\">
      <zicon-stub color=\\"cherry-500\\" icon=\\"alert-circle\\" size=\\"x-small\\" class=\\"mt-1 flex-shrink-0\\"></zicon-stub> <span>
        Switch your monorepo to a normal repository and all the data related to your projects would be deleted.
      </span>
    </div>
    <div class=\\"flex w-full items-start gap-2\\">
      <zicon-stub color=\\"cherry-500\\" icon=\\"alert-circle\\" size=\\"x-small\\" class=\\"mt-1 flex-shrink-0\\"></zicon-stub> <span>
        A new analysis run will be triggered for the repository.
      </span>
    </div>
    <div class=\\"space-y-2\\"><label for=\\"monorepo-validation-text\\" class=\\"text-vanilla-400\\">
        Please type
        <span class=\\"highlight-name\\">test-org/test-repo</span>
        to confirm this action
      </label>
      <zinput-stub id=\\"monorepo-validation-text\\" placeholder=\\"test-org/test-repo\\" value=\\"\\" class=\\"border border-ink-200\\"></zinput-stub>
    </div>
  </div>
</zmodal-stub>"
`;

exports[`[[ ToggleMonorepoConfirm ]] renders various states of the toggle monorepo confirm modal: {"togglingMonorepoMode":true,"isMonorepo":false} 1`] = `
"<zmodal-stub title=\\"Convert to monorepo\\">
  <div class=\\"space-y-5 p-4 text-xs text-vanilla-100\\">
    <p>
      Converting <span class=\\"highlight-name\\">test-repo</span> to a monorepo on
      test-org
      would :
    </p>
    <div class=\\"flex w-full items-start gap-2\\">
      <zicon-stub color=\\"juniper-500\\" icon=\\"alert-circle\\" size=\\"x-small\\" class=\\"mt-1 flex-shrink-0\\"></zicon-stub> <span>
        Erase all data related to this repository. Fresh analysis would be triggered for projects inside the monorepo.
      </span>
    </div>
    <div class=\\"flex w-full items-start gap-2\\">
      <zicon-stub color=\\"juniper-500\\" icon=\\"alert-circle\\" size=\\"x-small\\" class=\\"mt-1 flex-shrink-0\\"></zicon-stub> <span>
        The repository will be marked as a monorepo and you would be able to mark folders inside the repository as Projects.
      </span>
    </div>
    <div class=\\"space-y-2\\"><label for=\\"monorepo-validation-text\\" class=\\"text-vanilla-400\\">
        Please type
        <span class=\\"highlight-name\\">test-org/test-repo</span>
        to confirm this action
      </label>
      <zinput-stub id=\\"monorepo-validation-text\\" placeholder=\\"test-org/test-repo\\" value=\\"\\" class=\\"border border-ink-200\\"></zinput-stub>
    </div>
  </div>
</zmodal-stub>"
`;

exports[`[[ ToggleMonorepoConfirm ]] renders various states of the toggle monorepo confirm modal: {"togglingMonorepoMode":true,"isMonorepo":true} 1`] = `
"<zmodal-stub title=\\"Disable monorepo mode\\">
  <div class=\\"space-y-5 p-4 text-xs text-vanilla-100\\">
    <p>
      Converting <span class=\\"highlight-name\\">test-repo</span> to a monorepo on
      test-org
      would :
    </p>
    <div class=\\"flex w-full items-start gap-2\\">
      <zicon-stub color=\\"cherry-500\\" icon=\\"alert-circle\\" size=\\"x-small\\" class=\\"mt-1 flex-shrink-0\\"></zicon-stub> <span>
        Switch your monorepo to a normal repository and all the data related to your projects would be deleted.
      </span>
    </div>
    <div class=\\"flex w-full items-start gap-2\\">
      <zicon-stub color=\\"cherry-500\\" icon=\\"alert-circle\\" size=\\"x-small\\" class=\\"mt-1 flex-shrink-0\\"></zicon-stub> <span>
        A new analysis run will be triggered for the repository.
      </span>
    </div>
    <div class=\\"space-y-2\\"><label for=\\"monorepo-validation-text\\" class=\\"text-vanilla-400\\">
        Please type
        <span class=\\"highlight-name\\">test-org/test-repo</span>
        to confirm this action
      </label>
      <zinput-stub id=\\"monorepo-validation-text\\" placeholder=\\"test-org/test-repo\\" value=\\"\\" class=\\"border border-ink-200\\"></zinput-stub>
    </div>
  </div>
</zmodal-stub>"
`;
